--- a/package.json
+++ b/package.json
@@ -37,13 +37,13 @@
     "@nrwl/eslint-plugin-nx": "13.4.3",
     "@nrwl/jest": "13.4.3",
     "@nrwl/linter": "13.4.3",
-    "@nrwl/storybook": "^13.4.3",
+    "@nrwl/storybook": "^13.4.5-beta.3",
     "@nrwl/tao": "13.4.3",
     "@nrwl/workspace": "13.4.3",
-    "@storybook/addon-essentials": "~6.4.5",
-    "@storybook/angular": "^6.5.0-alpha.13",
-    "@storybook/builder-webpack5": "~6.4.5",
-    "@storybook/manager-webpack5": "~6.4.5",
+    "@storybook/addon-essentials": "^6.5.0-alpha.15",
+    "@storybook/angular": "^6.5.0-alpha.15",
+    "@storybook/builder-webpack5": "^6.5.0-alpha.15",
+    "@storybook/manager-webpack5": "^6.5.0-alpha.15",
     "@types/jest": "27.0.2",
     "@types/node": "14.14.33",
     "@typescript-eslint/eslint-plugin": "~5.3.0",
@@ -52,10 +52,12 @@
     "eslint": "8.2.0",
     "eslint-config-prettier": "8.1.0",
     "eslint-plugin-cypress": "^2.10.3",
+    "eslint-plugin-storybook": "^0.5.5",
     "jest": "27.2.3",
     "jest-preset-angular": "11.0.0",
     "prettier": "^2.3.1",
     "ts-jest": "27.0.5",
-    "typescript": "~4.4.3"
+    "typescript": "~4.4.3",
+    "webpack": "^5.66.0"
   }
 }
